Workspace/logs/socketcan_interface/build.make.000.log
[35m[1mScanning dependencies of target socketcan_interface_string
[0m[35m[1mScanning dependencies of target socketcan_interface_plugin
[0m[ 33%] [32mBuilding CXX object CMakeFiles/socketcan_interface_string.dir/src/string.cpp.o
[0m[ 66%] [32mBuilding CXX object CMakeFiles/socketcan_interface_plugin.dir/src/socketcan_interface_plugin.cpp.o
[0m[31m[1mLinking CXX shared library /home/uwrt/MarsRover2017/Workspace/devel/.private/socketcan_interface/lib/libsocketcan_interface_string.so
[0m[ 66%] Built target socketcan_interface_string
[35m[1mScanning dependencies of target socketcan_dump
[0m[100%] [32mBuilding CXX object CMakeFiles/socketcan_dump.dir/src/candump.cpp.o
In file included from /home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/socketcan.h:4:0,
                 from /home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/src/socketcan_interface_plugin.cpp:2:
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h: In member function ‘virtual bool can::AsioDriver<Socket>::send(const can::Frame&)’:
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h:104:30: error: there are no arguments to ‘ROS_ERROR’ that depend on a template parameter, so a declaration of ‘ROS_ERROR’ must be available [-fpermissive]
             ROS_ERROR("READY");
                              ^
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h:104:30: note: (if you use ‘-fpermissive’, G++ will accept your code, but allowing the use of an undeclared name is deprecated)
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h:106:34: error: there are no arguments to ‘ROS_ERROR’ that depend on a template parameter, so a declaration of ‘ROS_ERROR’ must be available [-fpermissive]
             ROS_ERROR("NOT READY");
                                  ^
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h: In instantiation of ‘bool can::AsioDriver<Socket>::send(const can::Frame&) [with Socket = boost::asio::posix::basic_stream_descriptor<>]’:
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/src/socketcan_interface_plugin.cpp:4:75:   required from here
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h:104:30: error: ‘ROS_ERROR’ was not declared in this scope
             ROS_ERROR("READY");
                              ^
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h:106:34: error: ‘ROS_ERROR’ was not declared in this scope
             ROS_ERROR("NOT READY");
                                  ^
make[2]: *** [CMakeFiles/socketcan_interface_plugin.dir/src/socketcan_interface_plugin.cpp.o] Error 1
make[1]: *** [CMakeFiles/socketcan_interface_plugin.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
In file included from /home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/socketcan.h:4:0,
                 from /home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/src/candump.cpp:6:
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h: In member function ‘virtual bool can::AsioDriver<Socket>::send(const can::Frame&)’:
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h:104:30: error: there are no arguments to ‘ROS_ERROR’ that depend on a template parameter, so a declaration of ‘ROS_ERROR’ must be available [-fpermissive]
             ROS_ERROR("READY");
                              ^
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h:104:30: note: (if you use ‘-fpermissive’, G++ will accept your code, but allowing the use of an undeclared name is deprecated)
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h:106:34: error: there are no arguments to ‘ROS_ERROR’ that depend on a template parameter, so a declaration of ‘ROS_ERROR’ must be available [-fpermissive]
             ROS_ERROR("NOT READY");
                                  ^
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h: In instantiation of ‘bool can::AsioDriver<Socket>::send(const can::Frame&) [with Socket = boost::asio::posix::basic_stream_descriptor<>]’:
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/src/candump.cpp:91:1:   required from here
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h:104:30: error: ‘ROS_ERROR’ was not declared in this scope
             ROS_ERROR("READY");
                              ^
/home/uwrt/MarsRover2017/Workspace/src/ros_canopen/socketcan_interface/include/socketcan_interface/asio_base.h:106:34: error: ‘ROS_ERROR’ was not declared in this scope
             ROS_ERROR("NOT READY");
                                  ^
make[2]: *** [CMakeFiles/socketcan_dump.dir/src/candump.cpp.o] Error 1
make[1]: *** [CMakeFiles/socketcan_dump.dir/all] Error 2
make: *** [all] Error 2
